...
  "termsOfServiceLink": "Terms of Service",
  "privacyPolicy": "Privacy Policy",
  "editProfile": "Edit Profile",
  "profileName": "Profile Name",
  "profile": "Profile",
  "confirmNumber": "Connect Phone Number",
  "cancel": "Cancel",
  "changeProfilePhoto": "Change Profile Photo",
  "name": "Name",
  "editName": "Edit Name",
  "submit": "Submit",
  "selectLanguage": "Select Language",
  "selectCurrency": "Select Currency",
...
  "backupAndRecovery": "Backup and Recovery",
  "writeDownKey": "Please write down your Phrase",
  "writeDownKeyExperimental": "Please write down your phrase.",
  "completeEducation": "I Understand",
  "yourAccountKey": "Your Recovery Phrase",
  "backupKeyNotification2": "Keep your funds safe. Back up your Recovery Phrase now.",
  "keylessBackupCTA": "Back up now",
  "keylessBackupNotification": "Set up your email & phone number to back up your seed phrase",
  "backupKeyCTA": "Finish Backup Now",
  "backupKeySummary": "Find a private place and write down your Recovery Phrase. Please store it somewhere safe. Do not save it in your phone.",
  "backupKeyWarning": "If you lose your recovery phrase, you will lose access to all funds held in {{appName}}.",
  "copied": "Phrase copied to clipboard",
  "moreInfo": "More Info",
...
    "2": "You’re all set!"
  },
  "cancelDialog": {
    "title": "Finish setting up your Recovery Phrase",
    "body": "Your Recovery Phrase is extremely important. Without a Phrase, you can lose access to your wallet forever.\nYou will be blocked from sending any transactions until you finish setting up your Recovery Phrase.",
    "action": "Complete Now",
    "secondary": "Set Up Later"
  },
  "backupPhrasePlaceholder": "horse leopard dog monkey shark tiger lemur whale squid wolf squirrel mouse lion elephant cat shrimp bear penguin deer turtle fox zebra goat giraffe",
  "guide": [
    {
      "title": "Your Recovery Phrase is a special kind of password",
      "text": "Your Recovery Phrase is the one and only way to access your account."
...
  "startSuperchargingNotificationStart": "Get rewards",
  "cashIn": "Add {{currency}}",
  "connectNumber": "Connect number",
  "connectToWallet": "Connect to {{dappName}}",
  "confirmTransaction": "Confirm transaction",
  "allow": "Allow",
  "address": "Wallet Address",
  "supportedNetwork": "Supported Network: {{network}}",
  "supportedNetworks": "Supported Networks: {{networks}}",
  "and": "and",
  "phoneNumber": "Phone Number",
  "transaction": {
    "operation": "Operation",
...
  "withdrawCeloAmount": "Amount (CELO)",
  "withdrawScanQrTitle": "Scan",
  "tokenBalance": "{{token}} Balance",
  "addFunds": "Add Funds",
  "addFundsHeaderWithCurrency": "Add {{token}}",
  "addFundsSubtitle": "Fund your {{appName}} account",
  "exchanges": "Exchanges",
  "noExchanges": "There are no exchanges available for {{digitalAsset}} in your region.",
  "buySellOnExchanges": "Buy/Sell on Exchanges",
  "cashOut": "Withdraw Funds",
  "cashOutSubtitle": "Spend on gift cards and other purchases or send funds to a crypto exchange",
  "cashOutComingSoon": "Cash Out (Coming Soon)",
  "spend": "Spend",
  "spendSubtitle": "Use your balance with supporting merchants",
  "amountCelo": "Amount (CELO)",
  "onlyCeloDollars": "cUSD only",
  "onlyCelo": "CELO only",
  "celoDollar": "Celo Dollar",
  "celoEuro": "Celo Euro",
...
  "loadingContacts": "Finding your contacts",
  "myCode": "My Code",
  "scanCode": "Scan",
  "scanQRCode": "Scan QR Code",
  "enterQRCode": "Enter QR Code",
  "writeStorageNeededForQrDownload": "Storage write permission is needed for downloading the QR code",
  "cameraScanInfo": "Center code in the box above",
  "cameraNotAuthorizedTitle": "Enable Camera",
  "cameraNotAuthorizedDescription": "Please enable the Camera in your phone’s Settings. You’ll need it to scan QR codes.",
  "cameraSettings": "Settings",
  "toSentOrRequestPayment": "to send or request payment",
  "reminderSent": "Reminder Sent",
  "reclaimPayment": "Reclaim Payment",
...
    },
    "cashOut": {
      "fiatExchangeTitle": "Withdraw Funds",
      "fiatExchangeSubtitle": "Get funds out of {{appName}} and into a bank account, card, crypto exchange or to mobile money.",
      "selectCurrencyTitle": "Withdraw Funds",
      "exchangeAmountTitle": "Withdraw {{currency}}",
      "selectProviderHeader": "Select Withdraw Method",
      "withdrawExchangeTitle": "Withdraw Crypto"
    },
    "spend": {
      "fiatExchangeTitle": "Spend Funds",
      "fiatExchangeSubtitle": "Spend on gift cards and other purchases.",
      "selectCurrencyTitle": "Spend Funds"
...
  "viewOnOPMainnetExplorer": "View on OP Mainnet Explorer",
  "viewOnOPSepoliaExplorer": "View on OP Sepolia Explorer",
  "viewOnPolygonPoSScan": "View on PolygonScan",
  "viewOnBaseScan": "View on BaseScan",
  "viewOnAxelarScan": "View on AxelarScan",
  "sendEnterAmountScreen": {
    "title": "Enter Amount",
    "selectToken": "Select a Token",
    "networkFee": "{{networkName}} Network Fee",
    "networkFeeV1_97": "Network Fee",
    "lowerAmount": "Enter a lower amount",
    "maxAmountWarning": {
      "title": "Sending the maximum amount",
...
