...
        }
        value={input}
        onChangeText={onChangeText}
        inputStyle={styles.input}
        placeholderTextColor={colors.inactive}
        allowFontScaling={allowFontScaling}
        testID="SendSelectRecipientSearchInput"
      />
    </View>
  )
}

const styles = StyleSheet.create({
...
