...
        <TextInput
          autoFocus={true}
          value={value}
          style={styles.manualInput}
          autoCapitalize="none"
          onChangeText={onModalTextChange}
          testID="ManualInput"
        />
        <View style={styles.actions}>
          <TextButton style={styles.cancelButton} onPress={closeModal}>
            {t('cancel')}
          </TextButton>
          <TextButton onPress={submitModal} testID="ManualSubmit">
            {t('submit')}
          </TextButton>
        </View>
      </Modal>
    </View>
  )
...
